--- a/great_connector/portfolio.html
+++ b/great_connector/portfolio.html
@@ -42,28 +42,28 @@
           <ul>
             <span class="flex_titles">Games</span>
             <li>
-              <a href="../Peronal Project/guess_my_number/noun3.html"
+              <a href="/Personal Projects/guess_my_number/noun3.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Guess My Number
                 </button></a
               >
             </li>
             <li>
-              <a href="../Peronal Project/pig_game/index.html"
+              <a href="/Personal Projects/pig_game/index.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Pig Game
                 </button></a
               >
             </li>
             <li>
-              <a href="../Peronal Project/mathGame/index.html"
+              <a href="/Personal Projects/mathGame/index.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Math Speed Game
                 </button></a
               >
             </li>
             <li>
-              <a href="../Peronal Project/Refreash/index.html"
+              <a href="/Personal Projects/Refreash/index.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Memory Game
                 </button></a
@@ -75,21 +75,21 @@
           <ul>
             <span class="flex_titles">Websites</span>
             <li>
-              <a href="../Peronal Project/multi_media2/index.html"
+              <a href="/Personal Projects/multi_media2/index.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Multimedia Portfolio
                 </button></a
               >
             </li>
             <li>
-              <a href="/Web_Apps/extra.html"
+              <a href="../Web_Apps2/extra.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Test Website
                 </button></a
               >
             </li>
             <li>
-              <a href="/Web_Apps/demo_website/index.html"
+              <a href="../"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Demo Website
                 </button></a
