--- a/great_connector/portfolio.html
+++ b/great_connector/portfolio.html
@@ -82,14 +82,14 @@
               >
             </li>
             <li>
-              <a href="../Web_Apps2/extra.html"
+              <a href="/Web_Apps2/extra.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Test Website
                 </button></a
               >
             </li>
             <li>
-              <a href="../"
+              <a href="/Web_Apps2/demo_website/index.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Demo Website
                 </button></a
