finished with my website
version 1

--- a/Personal Projects/Refreash/index.html
+++ b/Personal Projects/Refreash/index.html
@@ -11,7 +11,7 @@
     <div class="setting_box">
       <button class="nightlight">Night Light</button>
       <button> <a style="text-decoration: none; color: black;" href="/great_connector/portfolio.html" >return</a></button>
-      <button>Zoom</button>
+      <button class="zoom">Zoom</button>
     </div>
     <h1>Refreasher Course</h1>
   </br> 
@@ -32,5 +32,6 @@
   <button id="start"> -- START --</button> 
   <button id="end"> -- END / RESET -- </button>
     <script src="script.js"></script>
+    <script src="/great_connector/script/javascript/script.js"></script> 
   </body>
 </html>
