--- a/Personal Projects/multi_media1/Home.html
+++ b/Personal Projects/multi_media1/Home.html
@@ -13,9 +13,11 @@
     <link rel="stylesheet" type="text/css" href="Adj.css" />
   </head>
   <body>
-    <div class="setting_box"> 
-    <button> <a style="text-decoration: none; color: black;" href="/Peronal Project/multi_media2/index.html" >Return to New Version</a></button>
-    <button> <a style="text-decoration: none; color: black;" href="/great_connector/portfolio.html" >Portfolio</a></button>
+    <div class="setting_box">
+      <button class="nightlight">Night Light</button>
+      <button> <a style="text-decoration: none; color: black;" href="/great_connector/portfolio.html" > Return to Portfolio </a></button>
+      <button class="zoom">Zoom</button>
+      <button> <a style="text-decoration: none; color: black;" href="/Personal Projects/multi_media2/index.html" > Return</a></button>
     </div>
     <main class="main_row">
       <div id="title">
@@ -44,6 +46,7 @@
       </div>
     </main>
     <script src="verb.js"></script>
+    <script src="/great_connector/script/javascript/script.js"></script>
   </body>
 </html>
 <!-- 
