--- a/Personal Projects/multi_media2/index.html
+++ b/Personal Projects/multi_media2/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-  <div class="setting_box">
+  <div class="setting_box" style="z-index: 5;">
     <button class="nightlight">Night Light</button>
     <button> <a style="text-decoration: none; color: black;" href="/great_connector/portfolio.html" >return</a></button>
-    <button>Zoom</button>
-    <button> <a style="text-decoration: none; color: black;" href="/Peronal Project/multi_media1/Home.html" > Original Version</a></button>
+    <button class="zoom">Zoom</button>
+    <button> <a style="text-decoration: none; color: black;" href="/Personal Projects/multi_media1/Home.html" > Original Version</a></button>
   </div>
     <main class="mainbody">
         <div class="header">
@@ -199,6 +199,6 @@
       </main>
     </div> -->
     <!-- <script src="script.js"></script> --> 
-    <script src="../../great_connector/script/javascript/script.js"></script>
+    <script src="/great_connector/script/javascript/script.js"></script>
   </body>
 </html>
