--- a/Personal Projects/pig_game/index.html
+++ b/Personal Projects/pig_game/index.html
@@ -15,7 +15,7 @@
   <div class="setting_box">
     <button class="nightlight">Night Light</button>
     <button> <a style="text-decoration: none; color: black;" href="/great_connector/portfolio.html" >return</a></button>
-    <button>Zoom</button>
+    <button class="zoom">Zoom</button>
   </div>
   <body class="backgroundInvert">
     <main class="body main invert">
@@ -54,5 +54,6 @@
       </section>
 
     <script src="script.js"></script>
+    <script src="/great_connector/script/javascript/script.js"></script>
   </body>
 </html>
