--- a/Web_Apps2/extra.html
+++ b/Web_Apps2/extra.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="setting_box">
+    <main class="setting_box">
+      <tr> 
       <button class="nightlight">Night Light</button>
       <button> <a style="text-decoration: none; color: black;" href="/great_connector/portfolio.html" >return</a></button>
-      <button>Zoom</button>
-    </div>
+      <button class="zoom">Zoom</button>
+      <tr> 
+      </main> 
     <h1>Test Website</h1>
     <p>Hello World</p>
     <img src="images/dune.png" alt="dune wurm" />
@@ -21,5 +23,6 @@
     <p> this change is on the branch2 branch </p> 
     <p> Branch 2 always goes before branch one </p>
     <p> You Fool </p>
+    <script src="/great_connector/script/javascript/script.js"></script> 
   </body>
 </html>
