--- a/Web_Apps2/table.html
+++ b/Web_Apps2/table.html
@@ -61,8 +61,15 @@
         </tr>
     </table>
     <a href="extra.html"><button> Home </button></a>
-    <a href="../Web Apps/table_test.html"><button> Table Test </button></a>
+    <a href="table_test.html"><button> Table Test </button></a>
+    <main class="setting_box">
+        <tr> 
+        <button class="nightlight">Night Light</button>
+        <button> <a style="text-decoration: none; color: black;" href="/great_connector/portfolio.html" >return</a></button>
+        <button class="zoom">Zoom</button>
+        </main> 
     <!-- <a href="../Web Apps../DACC Projects../OneDrive/webrepo/COde for Fun/index.html"> <button> AWESOME STORE </button> </a> --> 
-    <a href="https://docs.google.com/document/d/1xBKtONQG2rtle4_ob_-NMNct0lVUF_5_DKP7nLUX52Y/edit" alt="notes" target="_blank"> <button> Notes </button> </a>
+    <a href="../../../" target="_blank" > <button id="easter_egg" title="Easter Egg"> Easter Egg </button> </a>
+    <script src="/great_connector/script/javascript/script.js"></script>
   </body>
 </html>
