--- a/Web_Apps2/table_test.html
+++ b/Web_Apps2/table_test.html
@@ -74,6 +74,6 @@
     Cell: (740) 555-3478 </br> 
     Email: email_me@web-co.com
     </fieldset>
-    <a href="../Web Apps/extra.html"><button> Home </button></a>
+    <a href="extra.html"><button> Home </button></a>
   </body>
 </html>
