--- a/great_connector/home.html
+++ b/great_connector/home.html
@@ -27,7 +27,7 @@
     <main style="background-color: rgba(255, 255, 255, 0.651)">
       <div class="setting_box">
         <button class="nightlight">Night Light</button>
-        <button>Zoom</button>
+        <button class="zoom">Zoom</button>
       </div>
       <div class="title">
         <h1>--- DACC Website ---</h1>
