--- a/Personal Projects/mathGame/index.html
+++ b/Personal Projects/mathGame/index.html
@@ -20,7 +20,7 @@
     <div class="setting_box">
       <button class="nightlight">Night Light</button>
       <button> <a style="text-decoration: none; color: black;" href="/great_connector/portfolio.html" >return</a></button>
-      <button>Zoom</button>
+      <button class="zoom">Zoom</button>
     </div>
       <!-- <img class="cover image" src="https://i.imgflip.com/3oykwx.jpg" alt="sassy Yoda" /> -->
     <div class="cover image">
@@ -45,5 +45,6 @@
       </main>
     </div>
     <script src="script.js"></script>
+    <script src="/great_connector/script/javascript/script.js"></script> 
   </body>
 </html>
