--- a/great_connector/about.html
+++ b/great_connector/about.html
@@ -21,7 +21,7 @@
     <main>
       <div class="setting_box">
         <button class="nightlight">Night Light</button>
-        <button>Zoom</button>
+        <button class="zoom">Zoom</button>
       </div>
       <div class="title">
         <h1>--- DACC Website ---</h1>
