--- a/Personal Projects/demo_website/index.html
+++ b/Personal Projects/demo_website/index.html
@@ -11,6 +11,7 @@
 <!-- <meta http-equiv="refresh" content="30">   refreash --> 
 <link rel="icon" href="https://cdn.shopify.com/s/files/1/1061/1924/products/Sleeping_Emoji_grande.png?v=1571606036" alt="<SJ/>" type="image/x-icon" />
 <link rel="stylesheet" href="style.css">
+<!-- <link rel="stylesheet" href="/great_connector/script/css/main_outline.css"/> --> 
 <body> 
     <div class="settings_box"> 
         <button class="nightlight"> Night Light</button>
@@ -25,5 +26,6 @@
     <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. A inventore veritatis minus eaque perferendis ducimus vitae ipsa! Saepe, tempora mollitia praesentium, rerum commodi deserunt sit velit ullam distinctio voluptates perferendis! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus id repellendus, ad natus corrupti necessitatibus facilis iusto odio iure voluptatibus tempore quasi ut eius labore totam explicabo rerum sit vitae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptatum, eaque id numquam, aut asperiores beatae consequatur similique optio fugiat earum ea, maxime dolor. Tempore quis sit quo laboriosam tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, facilis qui hic vero ipsum saepe dignissimos explicabo exercitationem delectus dolorem magnam, in harum voluptate eveniet ea. Itaque excepturi mollitia dolorum.</p>
     <a href="about.html"> <button> About Me </button> </a>
     </main>
+    <script src="/great_connector/script/javascript/script.js"></script>
 </body>
 </html>
