--- a/great_connector/portfolio.html
+++ b/great_connector/portfolio.html
@@ -89,7 +89,7 @@
               >
             </li>
             <li>
-              <a href="/Web_Apps2/demo_website/index.html"
+              <a href="/Personal Projects/demo_website/index.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Demo Website
                 </button></a
