--- a/Web_Apps2/learning_js/index.html
+++ b/Web_Apps2/learning_js/index.html
@@ -5,6 +5,16 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <h1> Print Your Name </h1>
+    <input class="input" value="put in name" >
+    <button value="submit"> Enter </button>
+    <p> text will appear hear </p>
+    <br> 
+    <textarea style="background-color: green"> Space </textarea>
+    <br> 
+    <img src="monkey2.jfif" alt="money" onmouseover="monkey()" onmouseleave="monkeyleaves()"/> 
+    <br><br> 
+    <input type="text" id="image-text" value=""/> 
     <script src="script.js"></script>
   </body>
 </html>
