--- a/great_connector/portfolio.html
+++ b/great_connector/portfolio.html
@@ -42,8 +42,9 @@
           <ul>
             <span class="flex_titles">Games</span>
             <li>
+              
               <a href="/Personal Projects/guess_my_number/noun3.html"
-                ><!--<span class="asteric">&#8903<span>--><button>
+                ><button><!--<span class="asteric">&#8903<span>--> 
                   Guess My Number
                 </button></a
               >
