--- a/great_connector/portfolio.html
+++ b/great_connector/portfolio.html
@@ -43,28 +43,28 @@
             <span class="flex_titles">Games</span>
             <li>
               
-              <a href="/Personal Projects/guess_my_number/noun3.html"
+              <a href="../Personal Projects/guess_my_number/noun3.html"
                 ><button><!--<span class="asteric">&#8903<span>--> 
                   Guess My Number
                 </button></a
               >
             </li>
             <li>
-              <a href="/Personal Projects/pig_game/index.html"
+              <a href="../Personal Projects/pig_game/index.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Pig Game
                 </button></a
               >
             </li>
             <li>
-              <a href="/Personal Projects/mathGame/index.html"
+              <a href="../Personal Projects/mathGame/index.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Math Speed Game
                 </button></a
               >
             </li>
             <li>
-              <a href="/Personal Projects/Refreash/index.html"
+              <a href="../Personal Projects/Refreash/index.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Memory Game
                 </button></a
@@ -76,21 +76,21 @@
           <ul>
             <span class="flex_titles">Websites</span>
             <li>
-              <a href="/Personal Projects/multi_media2/index.html"
+              <a href="../Personal Projects/multi_media2/index.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Multimedia Portfolio
                 </button></a
               >
             </li>
             <li>
-              <a href="/Web_Apps2/extra.html"
+              <a href="../Web_Apps2/extra.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Test Website
                 </button></a
               >
             </li>
             <li>
-              <a href="/Personal Projects/demo_website/index.html"
+              <a href="../Personal Projects/demo_website/index.html"
                 ><!--<span class="asteric">&#8903<span>--><button>
                   Demo Website
                 </button></a
